[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-instrument-library"
version = "0.1.0"
description = "A Python library for interfacing with various laboratory instruments through GPIB/VISA connections"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Tyler Rothenberg", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]
dependencies = [
    "pyvisa>=1.11.0",
    "pyvisa-py>=0.5.0",
    "numpy>=1.19.0",
    "pandas>=1.0.0",
    "matplotlib>=3.3.0",
    "pillow>=6.2.0"
]

[project.optional-dependencies]
gui = [
    "PySimpleGUI>=4.40.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.3.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/rothenbergt/lab-instrument-library"
"Bug Tracker" = "https://github.com/rothenbergt/lab-instrument-library/issues"

[tool.setuptools]
packages = ["lab_instrument_library"]
include-package-data = true

[tool.setuptools.package-data]
lab_instrument_library = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require physical hardware",
]